--- a/QuizWebsite.Infrastructure/QuizWebsite.Infrastructure.csproj
+++ b/QuizWebsite.Infrastructure/QuizWebsite.Infrastructure.csproj
@@ -5,8 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <Folder Include="Data\Seeding\" />
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QuizWebsite.Core\QuizWebsite.Core.csproj" />
   </ItemGroup>
 
 </Project>
