--- a/QuizWebsite.Infrastructure/QuizWebsite.Infrastructure.csproj
+++ b/QuizWebsite.Infrastructure/QuizWebsite.Infrastructure.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.16" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.16" />
   </ItemGroup>
 
   <ItemGroup>
