--- a/QuizWebsite.Infrastructure/QuizWebsite.Infrastructure.csproj
+++ b/QuizWebsite.Infrastructure/QuizWebsite.Infrastructure.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\QuizWebsite.Core\QuizWebsite.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
