--- a/QuizWebsite.Api/appsettings.json
+++ b/QuizWebsite.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=QuizWebsite;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
