--- a/QuizWebsite.Infrastructure/QuizWebsite.Infrastructure.csproj
+++ b/QuizWebsite.Infrastructure/QuizWebsite.Infrastructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\Seeding\AnswerSeeder.cs~RF6b060f5.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.16" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.16" />
   </ItemGroup>
